<resources>
    <string name="app_name">StudentenSchoonmaakApp</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="auth_gefaald">Authenticatie mislukt</string>
    <string name="laden">Laden...</string>
    <string name="inloggen">Inloggen</string>
    <string name="wachtwoord">Wachtwoord</string>
    <string name="e_mail">E-mail</string>
    <string name="wachtwoord_vergeten">Wachtwoord vergeten?</string>
    <string name="nog_geen_account">Nog geen account?</string>
    <string name="voornaam">Voornaam</string>
    <string name="achternaam">Achternaam</string>
    <string name="herhaal_wachtwoord">Herhaal Wachtwoord</string>
    <string name="maak_account">Maak account</string>
    <string name="herstel_mijn_wachtwoord">Herstel mijn wachtwoord</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="title_activity_group_detail">GroupDetailActivity</string>
    <string name="title_activity_make_group">MakeGroupActivity</string>
    <string name="groepsnaam">Groepsnaam</string>
    <string name="groep_wachtwoord">Groep Wachtwoord</string>
    <string name="bijnaam">Bijnaam</string>
    <string name="e_mailadres">E-mailadres</string>
    <string name="lid_toevoegen">Lid toevoegen</string>
    <string name="verwijder">Verwijder</string>
    <string name="wijzig">Wijzig</string>
    <string name="lid_wijzigen">Lid wijzigen</string>
    <string name="deelnemers">Deelnemers</string>
    <string name="kamer_toevoegen">Kamer toevoegen</string>
    <string name="kamer">Kamer</string>
    <string name="opslaan">Opslaan</string>
    <string name="wie_zijn_taak_is_dit">Wie zijn taak is dit?</string>
    <string name="taken">Taken</string>
    <string name="kamers">Kamers</string>
    <string name="taak_toevoegen">Taak toevoegen</string>
    <string name="taak">Taak</string>
    <string name="wijzigen_of_verwijderen">Wijzigen of verwijderen</string>
    <string name="annuleer">Annuleer</string>
    <string name="het_verwijderen_van_een_kamer_zal_ook_alle_taken_in_deze_kamer_verwijderen">Het verwijderen van een kamer zal ook alle taken in deze kamer verwijderen!</string>
    <string name="weet_je_het_zeker">Weet je het zeker?</string>
    <string name="het_verwijderen_van_een_groep_zal_de_groep_inclusief_alle_data_in_deze_groep_permanent_verwijderen">Het verwijderen van een groep zal de groep, inclusief alle data in deze groep permanent verwijderen!</string>
    <string name="profiel">Profiel</string>
    <string name="vulkamer">Vul een kamer in.</string>
    <string name="vulmailin">Vul e-mail in.</string>
    <string name="vulwachtwoordin">Vul wachtwoord in.</string>
    <string name="registreren">Registreren</string>
    <string name="registerenmislukt">Registreren mislukt.</string>
    <string name="emailverstuurd">Account activatie e-mail verstuurd.</string>
    <string name="vulemailin">Vul e-mail in.</string>
    <string name="vulnaamin">Vul naam in.</string>
    <string name="vulachternaamin">Vul achternaam in.</string>
    <string name="vulwachtwoord">Vul wachtwoord in.</string>
    <string name="emailverzonden">E-mail verzonden.</string>
    <string name="ietsmisgegaan">Er is iets misgegaan.</string>
    <string name="vulkamerin">Vul een kamer in.</string>
    <string name="vultaakin">Vul een Taak in</string>
    <string name="wachtopinlog">Inloggen...</string>
    <string name="inloggenmislukt">Inloggen mislukt.</string>
    <string name="email_verzonden">E-mail verzonden.</string>
    <string name="iets_misgegaan">Er is iets misgegaan.</string>
    <string name="vulbijnaamin">Vul bijnaam in.</string>
    <string name="ubentalingelogd">U bent al ingelogd met deze email</string>
    <string name="vulgroepsnaamin">Vul groepsnaam in.</string>
    <string name="voegledentoe">U moet eerst leden toevoegen.</string>
    <string name="mijn_groep">Mijn Groep</string>
    <string name="voornaamm">Voornaam:</string>
    <string name="achternaamm">Achternaam:</string>
    <string name="email_adresm">Email adres:</string>
    <string name="mijn_groepen">Mijn groepen</string>
    <string name="voeg_toe">Voeg toe</string>
    <string name="e_mailadresmmm">E-mailadres:</string>
    <string name="naamvb">Naam:</string>
    <string name="kamerph">Kamer: %s</string>
    <string name="verantwoordelijkph">Verantwoordelijk: %s</string>
    <string name="appnaam">Studenten Schoonmaak app</string>
    <string name="kamermaggeen">Kamer mag geen . bevatten</string>
    <string name="taakmaggeen">Taak mag geen . bevatten</string>
    <string name="cleanstudent">Clean Student</string>
</resources>
