<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mprog.nl.studentenschoonmaakapp.RegisterActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:hint="@string/e_mail"
        android:id="@+id/RegisterEmail" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/voornaam"
        android:ems="10"
        android:layout_below="@+id/RegisterEmail"
        android:layout_alignRight="@+id/RegisterEmail"
        android:layout_alignEnd="@+id/RegisterEmail"
        android:layout_marginTop="18dp"
        android:id="@+id/RegisterName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/achternaam"
        android:ems="10"
        android:layout_marginTop="14dp"
        android:id="@+id/RegisterLastName"
        android:layout_below="@+id/RegisterName"
        android:layout_alignLeft="@+id/RegisterName"
        android:layout_alignStart="@+id/RegisterName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/wachtwoord"
        android:layout_below="@+id/RegisterName"
        android:layout_alignLeft="@+id/RegisterName"
        android:layout_alignStart="@+id/RegisterName"
        android:layout_marginTop="65dp"
        android:id="@+id/RegisterPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/herhaal_wachtwoord"
        android:layout_below="@+id/RegisterPassword"
        android:layout_alignRight="@+id/RegisterPassword"
        android:layout_alignEnd="@+id/RegisterPassword"
        android:layout_marginTop="17dp"
        android:id="@+id/RegisterPasswordConfirm" />

    <Button
        android:text="@string/maak_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RegisterPasswordConfirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/RegisterButton" />
</RelativeLayout>
