<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:text="@string/lid_wijzigen"
            android:textSize="20sp"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/invite_dialog_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:text="@string/e_mailadres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title_invite_member_email"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/field_edit_member_email"
            android:hint="@string/e_mailadres"
            android:paddingBottom="20dp"/>

        <TextView
            android:text="@string/bijnaam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title_invite_member_name"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/field_edit_member_name"
            android:hint="@string/bijnaam" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:paddingBottom="10dp">

            <Button
                android:text="@string/wijzig"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:id="@+id/edit_member_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@android:color/holo_green_light"
                />


            <Button
                android:text="@string/verwijder"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:id="@+id/remove_member_button"
                android:textColor="@android:color/holo_red_dark"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                />

        </LinearLayout>

</LinearLayout>
