<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark"
    tools:context="mprog.nl.studentenschoonmaakapp.login.LoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/wachtwoord"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:id="@+id/field_login_password"
        android:layout_below="@+id/field_login_email"
        android:layout_alignLeft="@+id/field_login_email"
        android:layout_alignStart="@+id/field_login_email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:textColor="@android:color/white"
        android:hint="@string/e_mail"
        android:textColorHint="@android:color/white"
        android:id="@+id/field_login_email"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/inloggen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/login_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/field_login_password"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@android:color/white" />

    <TextView
        android:text="@string/wachtwoord_vergeten"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password_forgotten"
        android:textColor="@android:color/white"
        android:layout_above="@+id/register"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="15dp" />

    <TextView
        android:text="@string/nog_geen_account"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:id="@+id/register"
        android:layout_marginBottom="39dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/password_forgotten"
        android:layout_alignStart="@+id/password_forgotten"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/clean_logo"
        android:tint="@android:color/white"
        android:id="@+id/imageView2"
        android:layout_marginTop="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/login_button"
        android:layout_alignStart="@+id/login_button"
        android:background="@color/colorPrimaryDark" />
</RelativeLayout>
