<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <TextView
        android:text="@string/kamer_toevoegen"
        android:textSize="20sp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/add_room_dialog_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:text="@string/kamer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_field_add_room"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/field_add_room"
        android:hint="@string/kamer"
        android:paddingBottom="20dp"/>

    <TextView
        android:text="@string/wie_zijn_taak_is_dit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_field_add_responsible_member"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/spinner"
        android:layout_weight="0.41" />

    <!--<EditText-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:paddingBottom="20dp"-->
        <!--android:inputType="textPersonName"-->
        <!--android:ems="10"-->
        <!--android:id="@+id/field_add_responsible_member"-->
        <!--android:hint="@string/bijnaam" />-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:paddingBottom="10dp">

        <Button
            android:text="@string/opslaan"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:id="@+id/add_room_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="@android:color/holo_green_light"
            />

        <Button
            android:text="Annuleer"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_add_room_button"
            android:textColor="@android:color/holo_red_dark"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            />

    </LinearLayout>

</LinearLayout>
